...
      canil.contacts.firstWhere((cont) => cont.type == searchType);

  @override
  Widget build(BuildContext context) {
    return CupertinoPageScaffold(
      navigationBar: const CupertinoNavigationBar(
        middle: Text('Contate o Canil'),
        previousPageTitle: 'Detalhes',
      ),
      child: SafeArea(
        child: FutureBuilder<CanilDetails>(
            future: fc,
            builder: (context, snapshot) {
              if (snapshot.connectionState == ConnectionState.waiting) {
...
