...

class _TalkToKennelWidgetDetailsPageState
    extends State<TalkToKennelWidgetDetailsPage> with OneTimeClickButton {
  @override
  Widget build(BuildContext context) {
    return Semantics(
      label: 'onGoToKennelPage',
      //TODO: Substituir esse botão pelo do material para Android, pois a google solicita para acessibilidade 44dp para 48
      child: CupertinoButton.filled(
        onPressed: widget.puppy == null
            ? () {}
            : () {
                if (isRedundentClick(DateTime.now())) {
...
