...
        leading: Assets.icons.logo512Png.image(
          height: 32,
          width: 32,
          scale: 1,
        ),
        middle: const Text(
          'Filhotes disponíveis',
        ),
      ),
      child: SafeArea(
        child: BlocBuilder<GalleryPageBloc, GalleryPageState>(
          bloc: bloc,
          builder: (context, state) {
...
