appId: com.dreampuppy.gallery
---
- launchApp
- assertVisible: "Filhotes disponíveis"
- tapOn: ".*petCardImg1.*"
- assertVisible: "Detalhes"
- tapOn: ".*onGoToKennelPage.*"
# - tapOn: "Sobre o Canil"
- assertVisible: "Contate o Canil"